--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <h1 class="titulo">Mokepon</h1>
             <h2 class="subtitulo">Elige tu mascota:</h2>
             
-        <div class="tarjetas">
-            <input type="radio" name="mascota" id="hipodoge" />
+        <div id="contenedorTarjetas" class="tarjetas">
+            <!-- <input type="radio" name="mascota" id="hipodoge" />
             <label class="tarjeta-de-mokepon" for="hipodoge">
             <p>Hipodoge</p>
             <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="Hipodoge">
@@ -27,7 +27,7 @@
             <label class="tarjeta-de-mokepon" for="ratigueya">
             <p>Ratigueya</p>
             <img src="./assets/mokepons_mokepon_ratigueya_attack.png" alt="Ratigueya">
-            </label>
+            </label> -->
         </div>
 
     <button id="boton-mascota">Seleccionar</button>
